refactor(mobile illustration): not visible and max-width media queries

--- a/scss/fxj/_layout.scss
+++ b/scss/fxj/_layout.scss
@@ -29,8 +29,11 @@
     }
   }
 }
-@media (max-width: $screen-sm-min) {
-  .field--name-field-imagen-colabora {
-    display: none;
+@media (max-width: $screen-xs-max) {
+  .region-collaborate,
+  .footer {
+    img {
+        display: none;
+    }
   }
 }
