--- a/css/style.css
+++ b/css/style.css
@@ -8162,9 +8162,10 @@ body {
       .page-node-type-webform .region-content .field--name-field-imagen-colabora img,
       .page-node-type-colabora .region-content .field--name-field-imagen-colabora img {
         max-width: calc(100% - 20px); } }
-@media (max-width: 768px) {
-  /* line 33, ../scss/fxj/_layout.scss */
-  .field--name-field-imagen-colabora {
+@media (max-width: 767px) {
+  /* line 35, ../scss/fxj/_layout.scss */
+  .region-collaborate img,
+  .footer img {
     display: none; } }
 /* line 2, ../scss/fxj/_navbar-header.scss */
 .navbar {
@@ -9117,7 +9118,7 @@ a.a2a_i, i.a2a_i {
   .view-row-media .views-field-view-node {
     padding-left: 120px; }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   /* line 114, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
@@ -9253,47 +9254,37 @@ a.a2a_i, i.a2a_i {
     margin: 0 auto 10px auto;
     padding-top: 8px; }
 
-@media (max-width: 992px) {
-  /* line 256, ../scss/fxj/_views.scss */
-  .region-collaborate .collaborate-feature-container:nth-of-type(2) {
-    margin-bottom: 2rem; }
-    /* line 259, ../scss/fxj/_views.scss */
-    .region-collaborate .collaborate-feature-container:nth-of-type(2) .collaborate-feature {
-      text-align: left; }
-      /* line 261, ../scss/fxj/_views.scss */
-      .region-collaborate .collaborate-feature-container:nth-of-type(2) .collaborate-feature:nth-of-type(2) {
-        display: none; } }
 @media (min-width: 992px) {
-  /* line 271, ../scss/fxj/_views.scss */
+  /* line 257, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature .fontawesome-icon {
     width: 70px;
     height: 70px;
     border-radius: 35px;
     font-size: 30px;
     padding-top: 14px; }
-  /* line 280, ../scss/fxj/_views.scss */
+  /* line 266, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature-container:nth-of-type(2) .collaborate-feature {
     text-align: left;
     min-height: 148px;
     overflow: hidden; } }
-/* line 289, ../scss/fxj/_views.scss */
+/* line 275, ../scss/fxj/_views.scss */
 .footer .collaborate-feature-container {
   margin-bottom: 10px; }
-  /* line 292, ../scss/fxj/_views.scss */
+  /* line 278, ../scss/fxj/_views.scss */
   .footer .collaborate-feature-container:nth-of-type(2) {
     display: none; }
-/* line 298, ../scss/fxj/_views.scss */
+/* line 284, ../scss/fxj/_views.scss */
 .footer .view-footer a,
 .footer .collaborate-footer a {
   color: white; }
 
-/* line 305, ../scss/fxj/_views.scss */
+/* line 291, ../scss/fxj/_views.scss */
 .view-empresas-embajadoras a {
   display: block;
   padding: 0 0 3rem 0;
   text-align: center;
   height: 130px; }
-  /* line 311, ../scss/fxj/_views.scss */
+  /* line 297, ../scss/fxj/_views.scss */
   .view-empresas-embajadoras a img {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -9301,7 +9292,7 @@ a.a2a_i, i.a2a_i {
     display: inline-block;
     max-height: 100%;
     width: auto; }
-  /* line 320, ../scss/fxj/_views.scss */
+  /* line 306, ../scss/fxj/_views.scss */
   .view-empresas-embajadoras a:hover img, .view-empresas-embajadoras a:focus img {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
