--- a/css/style.css
+++ b/css/style.css
@@ -8219,136 +8219,104 @@ body {
       transform: rotate(-45deg);
       bottom: 6px;
       position: relative; }
-
-/* line 48, ../scss/fxj/_navbar-header.scss */
-.navbar-header {
-  background-color: white; }
-  /* line 50, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .logo {
-    display: block;
-    height: 50px;
-    margin: 8px 15px 8px 52px;
-    padding: 0; }
-    /* line 56, ../scss/fxj/_navbar-header.scss */
-    .navbar-header .logo img {
+  /* line 48, ../scss/fxj/_navbar-header.scss */
+  .navbar-header {
+    background-color: white; }
+    /* line 50, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .logo {
       display: block;
-      max-height: 100%; }
-  /* line 62, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .region-navigation > .search-block-form {
-    top: 10px;
-    right: 15px;
-    position: absolute;
-    width: calc(100% - 250px);
-    max-width: 200px; }
-
-/* line 71, ../scss/fxj/_navbar-header.scss */
-.navbar-nav {
-  margin: 0; }
-  /* line 77, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav .dropdown-toggle:hover .caret, .navbar-nav .dropdown-toggle:focus .caret {
-    color: #16a085; }
-  /* line 84, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav .btn-group.open + .dropdown-menu {
-    display: block;
-    border: 0; }
-  /* line 89, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav .btn-group .btn {
-    font-size: 1.6rem;
-    color: #777777; }
-  /* line 93, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav .btn-group + .dropdown-menu a {
-    font-size: 1.6rem;
-    font-weight: 300; }
-  /* line 98, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav .btn-group .btn {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    background-color: transparent;
-    border: 0;
-    border-radius: 0; }
-  /* line 107, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav > li a,
-  .navbar-nav > li .open a {
-    color: #333333;
-    background-color: transparent; }
-    /* line 112, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li a:hover, .navbar-nav > li a:focus,
-    .navbar-nav > li .open a:hover,
-    .navbar-nav > li .open a:focus {
+      height: 50px;
+      margin: 8px 15px 8px 52px;
+      padding: 0; }
+      /* line 56, ../scss/fxj/_navbar-header.scss */
+      .navbar-header .logo img {
+        display: block;
+        max-height: 100%; }
+    /* line 62, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .region-navigation > .search-block-form {
+      top: 10px;
+      right: 15px;
+      position: absolute;
+      width: calc(100% - 250px);
+      max-width: 200px; }
+  /* line 71, ../scss/fxj/_navbar-header.scss */
+  .navbar-nav {
+    margin: 0; }
+    /* line 77, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav .dropdown-toggle:hover .caret, .navbar-nav .dropdown-toggle:focus .caret {
+      color: #16a085; }
+    /* line 84, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav .btn-group.open + .dropdown-menu {
+      display: block;
+      border: 0; }
+    /* line 89, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav .btn-group .btn {
+      font-size: 1.6rem;
+      color: #777777; }
+    /* line 94, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav .btn-group .btn {
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      background-color: transparent;
+      border: 0;
+      border-radius: 0; }
+    /* line 101, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav .dropdown-menu a {
+      font-size: 1.6rem;
+      font-weight: 300; }
+    /* line 107, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav > li a,
+    .navbar-nav > li .open a {
       color: #333333;
-      background-color: transparent;
-      text-decoration: underline; }
-  /* line 119, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav > li .active a {
-    color: #16a085;
-    background-color: transparent; }
-    /* line 123, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li .active a:hover, .navbar-nav > li .active a:focus {
+      background-color: transparent; }
+      /* line 112, ../scss/fxj/_navbar-header.scss */
+      .navbar-nav > li a:hover, .navbar-nav > li a:focus,
+      .navbar-nav > li .open a:hover,
+      .navbar-nav > li .open a:focus {
+        color: #333333;
+        background-color: transparent;
+        text-decoration: underline; }
+    /* line 119, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav > li .active a {
       color: #16a085;
-      background-color: transparent;
-      text-decoration: underline; }
-  /* line 136, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav > li:last-of-type > a {
-    color: #fff;
-    background-color: #f1c40f;
-    border-color: #f1c40f;
-    border-radius: 2.5rem;
-    display: inline-block;
-    text-decoration: none; }
-    /* line 11, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-    .navbar-nav > li:last-of-type > a:focus, .navbar-nav > li:last-of-type > a.focus {
-      color: #fff;
-      background-color: #c29d0b;
-      border-color: #796307; }
-    /* line 17, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-    .navbar-nav > li:last-of-type > a:hover {
-      color: #fff;
-      background-color: #c29d0b;
-      border-color: #b8960b; }
-    /* line 22, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-    .navbar-nav > li:last-of-type > a:active, .navbar-nav > li:last-of-type > a.active, .open > .navbar-nav > li:last-of-type > a.dropdown-toggle {
-      color: #fff;
-      background-color: #c29d0b;
-      border-color: #b8960b; }
-      /* line 29, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-      .navbar-nav > li:last-of-type > a:active:hover, .navbar-nav > li:last-of-type > a:active:focus, .navbar-nav > li:last-of-type > a:active.focus, .navbar-nav > li:last-of-type > a.active:hover, .navbar-nav > li:last-of-type > a.active:focus, .navbar-nav > li:last-of-type > a.active.focus, .open > .navbar-nav > li:last-of-type > a.dropdown-toggle:hover, .open > .navbar-nav > li:last-of-type > a.dropdown-toggle:focus, .open > .navbar-nav > li:last-of-type > a.dropdown-toggle.focus {
-        color: #fff;
-        background-color: #a08209;
-        border-color: #796307; }
-    /* line 37, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-    .navbar-nav > li:last-of-type > a:active, .navbar-nav > li:last-of-type > a.active, .open > .navbar-nav > li:last-of-type > a.dropdown-toggle {
-      background-image: none; }
-    /* line 45, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-    .navbar-nav > li:last-of-type > a.disabled:hover, .navbar-nav > li:last-of-type > a.disabled:focus, .navbar-nav > li:last-of-type > a.disabled.focus, .navbar-nav > li:last-of-type > a[disabled]:hover, .navbar-nav > li:last-of-type > a[disabled]:focus, .navbar-nav > li:last-of-type > a[disabled].focus, fieldset[disabled] .navbar-nav > li:last-of-type > a:hover, fieldset[disabled] .navbar-nav > li:last-of-type > a:focus, fieldset[disabled] .navbar-nav > li:last-of-type > a.focus {
-      background-color: #f1c40f;
-      border-color: #f1c40f; }
-    /* line 53, ../bootstrap/stylesheets/bootstrap/mixins/_buttons.scss */
-    .navbar-nav > li:last-of-type > a .badge {
-      color: #f1c40f;
-      background-color: #fff; }
+      background-color: transparent; }
+      /* line 123, ../scss/fxj/_navbar-header.scss */
+      .navbar-nav > li .active a:hover, .navbar-nav > li .active a:focus {
+        color: #16a085;
+        background-color: transparent;
+        text-decoration: underline; }
 
 @media (max-width: 767px) {
-  /* line 146, ../scss/fxj/_navbar-header.scss */
+  /* line 135, ../scss/fxj/_navbar-header.scss */
   .navbar-fixed-top .navbar-collapse {
     background-color: rgba(0, 0, 0, 0.3);
     height: 100vh;
     max-height: 100vh;
-    padding: 0 0 30vh 0; }
-    /* line 151, ../scss/fxj/_navbar-header.scss */
+    width: 100vw;
+    max-width: 100vw;
+    padding: 0 50px 0 0;
+    position: absolute;
+    top: 0;
+    z-index: -1; }
+    /* line 146, ../scss/fxj/_navbar-header.scss */
     .navbar-fixed-top .navbar-collapse .region-navigation-collapsible {
-      background-color: rgba(255, 255, 255, 0.95); }
+      background-color: rgba(255, 255, 255, 0.95);
+      min-height: 100%;
+      max-height: 100%;
+      padding-top: 8rem; }
 
-  /* line 155, ../scss/fxj/_navbar-header.scss */
+  /* line 153, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
-    padding: 2rem; }
-    /* line 157, ../scss/fxj/_navbar-header.scss */
+    padding: 15px; }
+    /* line 156, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .caret {
       border-width: 10px; }
-    /* line 161, ../scss/fxj/_navbar-header.scss */
+    /* line 160, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn:not(.dropdown-toggle) {
       font-size: 2rem;
+      padding-left: 0;
       text-align: left;
-      width: 60vw; }
+      width: calc(100% - 40px); }
     /* line 166, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .dropdown-menu {
       -webkit-box-shadow: none;
@@ -8358,136 +8326,132 @@ body {
       /* line 171, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .dropdown-menu a {
         font-size: 2rem; }
-    /* line 177, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav .btn-group.open + .dropdown-menu {
-      float: none;
-      position: static; }
-    /* line 184, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li:last-of-type {
-      margin: 2rem 0; }
-      /* line 186, ../scss/fxj/_navbar-header.scss */
-      .navbar-nav > li:last-of-type a {
-        font-size: 2rem;
-        font-weight: 400; } }
+    /* line 175, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav .btn-group {
+      display: block; }
+      /* line 179, ../scss/fxj/_navbar-header.scss */
+      .navbar-nav .btn-group.open + .dropdown-menu {
+        float: none;
+        position: static; }
+    /* line 185, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav li {
+      margin-bottom: 5px; }
+      /* line 14, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
+      .navbar-nav li:before, .navbar-nav li:after {
+        content: " ";
+        display: table; }
+      /* line 19, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
+      .navbar-nav li:after {
+        clear: both; } }
 @media (min-width: 768px) {
-  /* line 195, ../scss/fxj/_navbar-header.scss */
+  /* line 192, ../scss/fxj/_navbar-header.scss */
   .navbar {
     background-color: white; }
 
-  /* line 198, ../scss/fxj/_navbar-header.scss */
+  /* line 195, ../scss/fxj/_navbar-header.scss */
   .navbar-header {
     width: 100%; }
-    /* line 200, ../scss/fxj/_navbar-header.scss */
+    /* line 197, ../scss/fxj/_navbar-header.scss */
     .navbar-header .region-navigation {
       position: relative; }
-    /* line 203, ../scss/fxj/_navbar-header.scss */
+    /* line 200, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo {
       margin-left: 0; }
-    /* line 207, ../scss/fxj/_navbar-header.scss */
+    /* line 204, ../scss/fxj/_navbar-header.scss */
     .navbar-header .region-navigation > .search-block-form {
       right: 0px;
       top: 15px; }
-      /* line 211, ../scss/fxj/_navbar-header.scss */
+      /* line 208, ../scss/fxj/_navbar-header.scss */
       .navbar-header .region-navigation > .search-block-form .form-item {
         margin-bottom: 0; }
 
-  /* line 216, ../scss/fxj/_navbar-header.scss */
+  /* line 213, ../scss/fxj/_navbar-header.scss */
   .region-navigation-collapsible {
     position: relative; }
 
-  /* line 219, ../scss/fxj/_navbar-header.scss */
+  /* line 216, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     position: absolute;
     right: 55px;
     top: 10px; }
-    /* line 225, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li .btn {
-      padding: 15px 0; }
-      /* line 228, ../scss/fxj/_navbar-header.scss */
-      .navbar-nav > li .btn:not(.dropdown-toggle) {
-        border-bottom: 5px solid white;
-        font-weight: 300;
-        text-decoration: none; }
-        /* line 233, ../scss/fxj/_navbar-header.scss */
-        .navbar-nav > li .btn:not(.dropdown-toggle):hover, .navbar-nav > li .btn:not(.dropdown-toggle):focus {
-          color: #16a085; }
-        /* line 238, ../scss/fxj/_navbar-header.scss */
-        .navbar-nav > li .btn:not(.dropdown-toggle):after {
-          color: #777777;
-          content: "|";
-          display: inline-block;
-          margin: 0 0 0 8px; }
-    /* line 248, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li.active .btn:not(.dropdown-toggle) {
-      border-bottom-color: #16a085; }
-    /* line 252, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li:not(:last-of-type) {
+    /* line 221, ../scss/fxj/_navbar-header.scss */
+    .navbar-nav > li {
       margin: 0 5px 0 0; }
-      /* line 256, ../scss/fxj/_navbar-header.scss */
-      .navbar-nav > li:not(:last-of-type) > a:hover, .navbar-nav > li:not(:last-of-type) > a:focus {
+      /* line 226, ../scss/fxj/_navbar-header.scss */
+      .navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
         border-color: #16a085; }
-    /* line 263, ../scss/fxj/_navbar-header.scss */
-    .navbar-nav > li:last-of-type a {
-      font-size: 1.4rem;
-      margin: 5px 0 0 0;
-      padding: 10px; } }
+      /* line 232, ../scss/fxj/_navbar-header.scss */
+      .navbar-nav > li .btn {
+        padding: 15px 0; }
+        /* line 235, ../scss/fxj/_navbar-header.scss */
+        .navbar-nav > li .btn:not(.dropdown-toggle) {
+          border-bottom: 5px solid white;
+          font-weight: 300;
+          text-decoration: none; }
+          /* line 240, ../scss/fxj/_navbar-header.scss */
+          .navbar-nav > li .btn:not(.dropdown-toggle):hover, .navbar-nav > li .btn:not(.dropdown-toggle):focus {
+            color: #16a085; }
+          /* line 245, ../scss/fxj/_navbar-header.scss */
+          .navbar-nav > li .btn:not(.dropdown-toggle):after {
+            color: #777777;
+            content: "|";
+            display: inline-block;
+            margin: 0 0 0 8px; }
+      /* line 255, ../scss/fxj/_navbar-header.scss */
+      .navbar-nav > li.active .btn:not(.dropdown-toggle) {
+        border-bottom-color: #16a085; } }
 @media (min-width: 992px) {
-  /* line 275, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav > li:not(:last-of-type) {
-    margin: 0 10px; }
-  /* line 279, ../scss/fxj/_navbar-header.scss */
-  .navbar-nav > li:last-of-type a {
-    font-size: 1.6rem;
-    margin: 0 10px;
-    padding: 15px; } }
-/* line 290, ../scss/fxj/_navbar-header.scss */
+  /* line 264, ../scss/fxj/_navbar-header.scss */
+  .navbar-nav > li {
+    margin: 0 10px; } }
+/* line 271, ../scss/fxj/_navbar-header.scss */
 #block-fxj-alpha-search {
   display: none; }
 
-/* line 293, ../scss/fxj/_navbar-header.scss */
+/* line 274, ../scss/fxj/_navbar-header.scss */
 .spb-popup-main-wrapper {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
   background-size: 200px;
   border: 0; }
-  /* line 299, ../scss/fxj/_navbar-header.scss */
+  /* line 280, ../scss/fxj/_navbar-header.scss */
   .spb-popup-main-wrapper .search-block-form {
     margin: 30vh 10vw 0 10vw; }
-    /* line 302, ../scss/fxj/_navbar-header.scss */
+    /* line 283, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-control {
       background-color: transparent;
       font-size: 3rem; }
-      /* line 306, ../scss/fxj/_navbar-header.scss */
+      /* line 287, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         font-size: 3rem; }
-      /* line 309, ../scss/fxj/_navbar-header.scss */
+      /* line 290, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
         /* IE 10+ */
         font-size: 3rem; }
-      /* line 312, ../scss/fxj/_navbar-header.scss */
+      /* line 293, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
         font-size: 3rem; }
-      /* line 315, ../scss/fxj/_navbar-header.scss */
+      /* line 296, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
         font-size: 3rem; }
-    /* line 320, ../scss/fxj/_navbar-header.scss */
+    /* line 301, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-submit {
       background-color: transparent;
       font-size: 2rem; }
 
-/* line 326, ../scss/fxj/_navbar-header.scss */
+/* line 307, ../scss/fxj/_navbar-header.scss */
 .spb_top_center {
   bottom: 0;
   left: 0;
   right: 0;
   top: 0; }
 
-/* line 332, ../scss/fxj/_navbar-header.scss */
+/* line 313, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-minimize {
   display: none; }
 
-/* line 335, ../scss/fxj/_navbar-header.scss */
+/* line 316, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-close {
   width: 4rem;
   height: 4rem;
@@ -8499,17 +8463,17 @@ body {
   right: 10vw;
   top: 1rem; }
 
-/* line 345, ../scss/fxj/_navbar-header.scss */
+/* line 326, ../scss/fxj/_navbar-header.scss */
 #search-popup {
   border: 0;
   display: none;
   background-color: transparent;
   border-color: transparent; }
-  /* line 351, ../scss/fxj/_navbar-header.scss */
+  /* line 332, ../scss/fxj/_navbar-header.scss */
   #search-popup:hover, #search-popup:focus {
     color: #16a085; }
 
-/* line 356, ../scss/fxj/_navbar-header.scss */
+/* line 337, ../scss/fxj/_navbar-header.scss */
 .simple-popup-blocks-global + #search-popup {
   font-size: 2rem;
   display: block;
