--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -44,124 +44,124 @@
       }
     }
   }
-}
-.navbar-header {
-  background-color: white;
-  .logo {
-    display: block;
-    height: 50px;
-    margin: 8px 15px 8px 52px;
-    padding: 0;
 
-    img {
+  &-header {
+    background-color: white;
+    .logo {
       display: block;
-      max-height: 100%;
-    }
-  }
+      height: 50px;
+      margin: 8px 15px 8px 52px;
+      padding: 0;
 
-  .region-navigation > .search-block-form {
-    top: 10px;
-    right: 15px;
-    position: absolute;
-    width: calc(100% - 250px);
-    max-width: 200px;
-  }
-}
-
-.navbar-nav {
-
-  margin: 0;
-  .dropdown-toggle {
-    &:hover,
-    &:focus {
-      .caret {
-        color: $brand-primary;
-      }
-    }
-  }
-  .btn-group {
-    &.open {
-      & + .dropdown-menu {
+      img {
         display: block;
-        border: 0;
+        max-height: 100%;
       }
     }
-    .btn {
-      font-size: 1.6rem;
-      color: $gray-light;
+
+    .region-navigation > .search-block-form {
+      top: 10px;
+      right: 15px;
+      position: absolute;
+      width: calc(100% - 250px);
+      max-width: 200px;
     }
-    + .dropdown-menu a {
+  }
+
+  &-nav {
+
+    margin: 0;
+    .dropdown-toggle {
+      &:hover,
+      &:focus {
+        .caret {
+          color: $brand-primary;
+        }
+      }
+    }
+    .btn-group {
+      &.open {
+        & + .dropdown-menu {
+          display: block;
+          border: 0;
+        }
+      }
+      .btn {
+        font-size: 1.6rem;
+        color: $gray-light;
+      }
+
+      .btn {
+        @include box-shadow(none);
+        background-color: transparent;
+        border: 0;
+        border-radius: 0;
+      }
+    }
+    .dropdown-menu a {
       font-size: 1.6rem;
       font-weight: 300;
     }
+    > li {
 
-    .btn {
-      @include box-shadow(none);
-      background-color: transparent;
-      border: 0;
-      border-radius: 0;
-    }
-  }
-  > li {
-
-    a,
-    .open a {
-      color: $gray-dark;
-      background-color: transparent;
-
-      &:hover,
-      &:focus {
+      a,
+      .open a {
         color: $gray-dark;
         background-color: transparent;
-        text-decoration: underline;
-      }
-    }
-    .active a {
-      color: $brand-primary;
-      background-color: transparent;
 
-      &:hover,
-      &:focus {
+        &:hover,
+        &:focus {
+          color: $gray-dark;
+          background-color: transparent;
+          text-decoration: underline;
+        }
+      }
+      .active a {
         color: $brand-primary;
         background-color: transparent;
-        text-decoration: underline;
-      }
-    }
-    &.active:not(:last-of-type) {
 
-    }
-
-    &:last-of-type {
-
-      > a {
-        @include btn-donate();
-        border-radius: 2.5rem;
-        display: inline-block;
-        text-decoration: none;
+        &:hover,
+        &:focus {
+          color: $brand-primary;
+          background-color: transparent;
+          text-decoration: underline;
+        }
       }
     }
   }
 }
+
 @media (max-width: $screen-xs-max) {
   .navbar-fixed-top .navbar-collapse {
     background-color: hsla(0,0%,0%,.3);
     height: 100vh;
     max-height: 100vh;
-    padding: 0 0 30vh 0;
+    width: 100vw;
+    max-width: 100vw;
+    padding: 0 50px 0 0;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+
     .region-navigation-collapsible {
       background-color: hsla(0,0%,100%,.95);
+      min-height: 100%;
+      max-height: 100%;
+      padding-top: 8rem;
     }
   }
   .navbar-nav {
-    padding: 2rem;
+    padding: 15px;
+
     .caret {
       border-width: 10px;
     }
 
     .btn:not(.dropdown-toggle) {
       font-size: 2rem;
+      padding-left: 0;
       text-align: left;
-      width: 60vw;
+      width: calc(100% - 40px);
     }
     .dropdown-menu {
       @include box-shadow(none);
@@ -173,6 +173,8 @@
       }
     }
     .btn-group {
+      display: block;
+
       &.open {
         & + .dropdown-menu {
           float: none;
@@ -180,14 +182,9 @@
         }
       }
     }
-    > li {
-      &:last-of-type {
-        margin: 2rem 0;
-        a {
-          font-size: 2rem;
-          font-weight: 400;
-        }
-      }
+    li {
+      @include clearfix();
+      margin-bottom: 5px;
     }
   }
 }
@@ -222,6 +219,16 @@
     top: 10px;
 
     > li {
+
+      margin: 0 5px 0 0;
+      > a {
+
+        &:hover,
+        &:focus {
+          border-color: $brand-primary;
+        }
+      }
+
       .btn {
         padding: 15px 0;
 
@@ -249,39 +256,13 @@
           border-bottom-color: $brand-primary;
         }
       }
-      &:not(:last-of-type) {
-        margin: 0 5px 0 0;
-        > a {
-
-          &:hover,
-          &:focus {
-            border-color: $brand-primary;
-          }
-        }
-      }
-      &:last-of-type {
-        a {
-          font-size: 1.4rem;
-          margin: 5px 0 0 0;
-          padding: 10px;
-        }
-      }
     }
   }
 }
 @media (min-width: $screen-md-min) {
   .navbar-nav {
     > li {
-      &:not(:last-of-type) {
         margin: 0 10px;
-      }
-      &:last-of-type {
-        a {
-          font-size: 1.6rem;
-          margin: 0 10px;
-          padding: 15px;
-        }
-      }
     }
   }
 }
