--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -47,6 +47,7 @@
 
   &-header {
     background-color: white;
+    position: relative;
     .logo {
       display: block;
       height: 50px;
@@ -372,6 +373,6 @@
   display: block;
   font-size: 2rem;
   position: absolute;
-  right: 6px;
+  right: -10px;
   top: 15px;
 }
