--- a/css/style.css
+++ b/css/style.css
@@ -8315,36 +8315,50 @@ body {
       min-height: 100%;
       max-height: 100%;
       padding-top: 8rem; }
+      /* line 169, ../scss/fxj/_navbar-header.scss */
+      .navbar-fixed-top .navbar-collapse .region-navigation-collapsible nav[id*="navegacionsecundaria"] {
+        background-color: #c0392b;
+        margin-top: 10px;
+        padding-top: 10px; }
+        /* line 174, ../scss/fxj/_navbar-header.scss */
+        .navbar-fixed-top .navbar-collapse .region-navigation-collapsible nav[id*="navegacionsecundaria"] a {
+          color: white; }
+      /* line 180, ../scss/fxj/_navbar-header.scss */
+      .navbar-fixed-top .navbar-collapse .region-navigation-collapsible .block[id*="dropdownlanguagecontent"] {
+        background-color: #c0392b;
+        float: none;
+        margin: 0;
+        padding: 15px; }
 
-  /* line 169, ../scss/fxj/_navbar-header.scss */
+  /* line 189, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     padding: 15px; }
-    /* line 172, ../scss/fxj/_navbar-header.scss */
+    /* line 192, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .caret {
       border-width: 10px; }
-    /* line 176, ../scss/fxj/_navbar-header.scss */
+    /* line 196, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn:not(.dropdown-toggle) {
       font-size: 2rem;
       padding-left: 0;
       text-align: left;
       width: calc(100% - 40px); }
-    /* line 182, ../scss/fxj/_navbar-header.scss */
+    /* line 202, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .dropdown-menu {
       -webkit-box-shadow: none;
       box-shadow: none;
       background-color: transparent;
       position: relative; }
-      /* line 187, ../scss/fxj/_navbar-header.scss */
+      /* line 207, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .dropdown-menu a {
         font-size: 2rem; }
-    /* line 191, ../scss/fxj/_navbar-header.scss */
+    /* line 211, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn-group {
       display: block; }
-      /* line 195, ../scss/fxj/_navbar-header.scss */
+      /* line 215, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .btn-group.open + .dropdown-menu {
         float: none;
         position: static; }
-    /* line 201, ../scss/fxj/_navbar-header.scss */
+    /* line 221, ../scss/fxj/_navbar-header.scss */
     .navbar-nav li {
       margin-bottom: 5px; }
       /* line 14, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
@@ -8355,128 +8369,134 @@ body {
       .navbar-nav li:after {
         clear: both; } }
 @media (min-width: 768px) {
-  /* line 208, ../scss/fxj/_navbar-header.scss */
+  /* line 228, ../scss/fxj/_navbar-header.scss */
   .navbar {
     background-color: white; }
-    /* line 212, ../scss/fxj/_navbar-header.scss */
+    /* line 232, ../scss/fxj/_navbar-header.scss */
     .navbar-collapse .block[id*="botondona"] {
       display: none; }
 
-  /* line 217, ../scss/fxj/_navbar-header.scss */
+  /* line 237, ../scss/fxj/_navbar-header.scss */
   .navbar-header {
     width: 100%; }
-    /* line 220, ../scss/fxj/_navbar-header.scss */
+    /* line 240, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo {
       margin-left: 0; }
-    /* line 223, ../scss/fxj/_navbar-header.scss */
+    /* line 244, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block[id*="botondona"] {
       margin-right: 37px; }
-    /* line 226, ../scss/fxj/_navbar-header.scss */
+    /* line 249, ../scss/fxj/_navbar-header.scss */
     .navbar-header .region-navigation > .search-block-form {
       right: 0px;
       top: 15px; }
-      /* line 230, ../scss/fxj/_navbar-header.scss */
+      /* line 253, ../scss/fxj/_navbar-header.scss */
       .navbar-header .region-navigation > .search-block-form .form-item {
         margin-bottom: 0; }
 
-  /* line 235, ../scss/fxj/_navbar-header.scss */
+  /* line 258, ../scss/fxj/_navbar-header.scss */
   .region-navigation-collapsible {
     position: relative; }
+    /* line 262, ../scss/fxj/_navbar-header.scss */
+    .region-navigation-collapsible .block[id*="dropdownlanguagecontent"] {
+      display: none; }
+    /* line 267, ../scss/fxj/_navbar-header.scss */
+    .region-navigation-collapsible nav[id*="navegacionsecundaria"] {
+      display: none; }
 
-  /* line 238, ../scss/fxj/_navbar-header.scss */
+  /* line 272, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     position: absolute;
     right: 14.5rem;
     top: 7px; }
-    /* line 243, ../scss/fxj/_navbar-header.scss */
+    /* line 277, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 5px 0 0; }
-      /* line 248, ../scss/fxj/_navbar-header.scss */
+      /* line 282, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
         border-color: #16a085; }
-      /* line 254, ../scss/fxj/_navbar-header.scss */
+      /* line 288, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn {
         padding: 15px 0 18px 0; }
-        /* line 257, ../scss/fxj/_navbar-header.scss */
+        /* line 291, ../scss/fxj/_navbar-header.scss */
         .navbar-nav > li .btn:not(.dropdown-toggle) {
           border-bottom: 5px solid white;
           font-weight: 300;
           text-decoration: none; }
-          /* line 262, ../scss/fxj/_navbar-header.scss */
+          /* line 296, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):hover, .navbar-nav > li .btn:not(.dropdown-toggle):focus {
             color: #16a085; }
-          /* line 267, ../scss/fxj/_navbar-header.scss */
+          /* line 301, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):after {
             color: #777777;
             content: "|";
             display: inline-block;
             margin: 0 0 0 8px; }
-      /* line 277, ../scss/fxj/_navbar-header.scss */
+      /* line 311, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li.active .btn:not(.dropdown-toggle) {
         border-bottom-color: #16a085; } }
 @media (min-width: 992px) {
-  /* line 286, ../scss/fxj/_navbar-header.scss */
+  /* line 320, ../scss/fxj/_navbar-header.scss */
   .navbar-header .block[id*="botondona"] {
     margin-right: 47px;
     padding: 0 15px; }
 
-  /* line 291, ../scss/fxj/_navbar-header.scss */
+  /* line 325, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     right: 19rem; }
-    /* line 293, ../scss/fxj/_navbar-header.scss */
+    /* line 327, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 10px; }
-      /* line 295, ../scss/fxj/_navbar-header.scss */
+      /* line 329, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn:not(.dropdown-toggle) {
         font-weight: 400; } }
-/* line 303, ../scss/fxj/_navbar-header.scss */
+/* line 337, ../scss/fxj/_navbar-header.scss */
 #block-fxj-alpha-search {
   display: none; }
 
-/* line 306, ../scss/fxj/_navbar-header.scss */
+/* line 340, ../scss/fxj/_navbar-header.scss */
 .spb-popup-main-wrapper {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
   background-size: 200px;
   border: 0; }
-  /* line 312, ../scss/fxj/_navbar-header.scss */
+  /* line 346, ../scss/fxj/_navbar-header.scss */
   .spb-popup-main-wrapper .search-block-form {
     margin: 30vh 10vw 0 10vw; }
-    /* line 315, ../scss/fxj/_navbar-header.scss */
+    /* line 349, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-control {
       background-color: transparent;
       font-size: 3rem; }
-      /* line 319, ../scss/fxj/_navbar-header.scss */
+      /* line 353, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         font-size: 3rem; }
-      /* line 322, ../scss/fxj/_navbar-header.scss */
+      /* line 356, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
         /* IE 10+ */
         font-size: 3rem; }
-      /* line 325, ../scss/fxj/_navbar-header.scss */
+      /* line 359, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
         font-size: 3rem; }
-      /* line 328, ../scss/fxj/_navbar-header.scss */
+      /* line 362, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
         font-size: 3rem; }
-    /* line 333, ../scss/fxj/_navbar-header.scss */
+    /* line 367, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-submit {
       background-color: transparent;
       font-size: 2rem; }
 
-/* line 339, ../scss/fxj/_navbar-header.scss */
+/* line 373, ../scss/fxj/_navbar-header.scss */
 .spb_top_center {
   bottom: 0;
   left: 0;
   right: 0;
   top: 0; }
 
-/* line 345, ../scss/fxj/_navbar-header.scss */
+/* line 379, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-minimize {
   display: none; }
 
-/* line 348, ../scss/fxj/_navbar-header.scss */
+/* line 382, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-close {
   width: 4rem;
   height: 4rem;
@@ -8488,18 +8508,18 @@ body {
   right: 10vw;
   top: 1rem; }
 
-/* line 358, ../scss/fxj/_navbar-header.scss */
+/* line 392, ../scss/fxj/_navbar-header.scss */
 #search-popup {
   border: 0;
   color: #777777;
   display: none;
   background-color: transparent;
   border-color: transparent; }
-  /* line 365, ../scss/fxj/_navbar-header.scss */
+  /* line 399, ../scss/fxj/_navbar-header.scss */
   #search-popup:hover, #search-popup:focus {
     color: #16a085; }
 
-/* line 370, ../scss/fxj/_navbar-header.scss */
+/* line 404, ../scss/fxj/_navbar-header.scss */
 .simple-popup-blocks-global + #search-popup {
   display: block;
   font-size: 2rem;
