--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -177,7 +177,8 @@
         }
       }
       .block {
-        &[id*="dropdownlanguagecontent"] {
+        &[id*="dropdownlanguagecontent"],
+        &[id*="dropdownlanguagecontenido"] {
           background-color: $brand-quaternary;
           float: none;
           margin: 0;
@@ -259,7 +260,8 @@
     position: relative;
 
     .block {
-      &[id*="dropdownlanguagecontent"] {
+      &[id*="dropdownlanguagecontent"],
+      &[id*="dropdownlanguagecontenido"] {
         display: none;
       }
     }
@@ -405,6 +407,11 @@
   display: block;
   font-size: 2rem;
   position: absolute;
-  right: -10px;
+  right: 5px;
   top: 15px;
+}
+@media (min-width: $screen-sm-min) {
+  .simple-popup-blocks-global + #search-popup {
+    right: -10px;
+  }
 }
